# web-splat

./: AGENT.md  Cargo.toml  README.md  build_wasm.bat  build_wasm.sh  features.md
doc/: KB.md  auto-camera.md
public/: index.html
src/: KB.md  animation.rs  controller.rs  gpu_rs.rs  lib.rs  pointcloud.rs  renderer.rs  ui.rs
src/io/: mod.rs  spz.rs
src/shaders/: gaussian.wgsl  preprocess.wgsl  preprocess_compressed.wgsl
